Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8509

Autocompletion after changes in *.ui is not available in CMake projects

    XMLWordPrintable

Details

    Description

      Autompletion for Designer UI is not accessable from source.

      1. Open CMake project
      2. Open any UI file with built-in Designer
      3. Add ui item
      4. Open any source which use that UI file
      5. ui-> (here we try to get autocompletion for item ^^)

      Attachments

        1. qtc-bug-1.png
          qtc-bug-1.png
          249 kB
        2. qtc-bug-2.png
          qtc-bug-2.png
          197 kB
        For Gerrit Dashboard: QTCREATORBUG-8509
        # Subject Branch Project Status CR V

        Activity

          People

            dt Daniel Teske
            tucnak Ilya Kowalewski
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes